--- a/readable-client/src/index.css
+++ b/readable-client/src/index.css
@@ -3,3 +3,26 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.loading-wrapper {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0,0,0,0.2);
+}
+
+.loading {
+  position: fixed;
+  z-index: 100;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%, 50%);
+}
+
+.category-menu {
+  padding: 10px 20px;
+}
